# prog1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
polymarket_ai/: __init__.py  config.py  main.py
polymarket_ai/collectors/: api_client.py  market_fetcher.py
polymarket_ai/models/: market.py
polymarket_ai/processing/: ai_analyzer.py  normalizer.py  translator.py  validators.py
polymarket_ai/utils/: __init__.py  exceptions.py  logger.py
polymarket_ai/webapp/: __init__.py  app.py
polymarket_ai/webapp/static/: app.js  index.html  style.css
tests/: conftest.py  test_ai_analyzer.py  test_api_client.py  test_market_fetcher.py  test_market_model.py  test_normalizer.py  test_polymarket_ai.py  test_translator.py  test_validators.py  test_webapp.py
