[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-ai"
version = "1.0.0"
description = "Збір даних prediction-ринків Polymarket, валідація/нормалізація та AI-аналіз торгових сигналів (Groq)."
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "flask>=2.3.0",
    "urllib3<2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pylint>=2.17.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
polymarket-ai = "polymarket_ai.main:main"
polymarket-ai-web = "polymarket_ai.webapp.app:main"

[tool.setuptools.packages.find]
include = ["polymarket_ai*"]
